Dockerized and working using wkhtmltopdf

--- a/app/templates/default_header.html
+++ b/app/templates/default_header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link href="/static/css/portal/hipaa/report.css" rel="stylesheet" type="text/css">
+        <link href="/static/css/report.css" rel="stylesheet" type="text/css">
         <script>
         function subst() {
             var vars={};
