--- a/app/templates/default_footer.html
+++ b/app/templates/default_footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link href="/static/css/portal/hipaa/report.css" rel="stylesheet" type="text/css">
+        <link href="/static/css/report.css" rel="stylesheet" type="text/css">
         <script>
         function subst() {
             var vars={};
@@ -28,9 +28,9 @@
         <div class="report-footer">
             <div class="report-footer-page-number">
                 <span class="page"></span>
-                <span class="report-footer-text"> &copy; [- year -] made using WkHtmlToPdf</span>
+                <span class="report-footer-text"> &copy; Made using WkHtmlToPdf</span>
             </div>
-            <img src="/static/img/sm_logo.svg" height="30px;" class="report-footer-img">
+            <img src="/static/img/generic_logo.jpg" height="70px;" class="report-footer-img">
         </div>
     </body>
 </html>
