--- a/app/static/css/report.css
+++ b/app/static/css/report.css
@@ -22,7 +22,7 @@
         padding-left: 5px;
     }
     .report-header {
-        padding-top: 40px;
+        height: 40px;
     }
     .coverpage {
         position: relative;
