--- a/app/templates/default_header.html
+++ b/app/templates/default_header.html
@@ -24,7 +24,11 @@
         </script>
     </head>
     <body class="no-margin-no-padding" onload="subst()">
-        <div class="report-header"></div>
+        <div class="report-header">
+            <span style='float:right'>
+                Page <span class="page"></span> / <span class="topage"></span>
+            </span>
+        </div>
 
     </body>
 </html>
