--- a/app/templates/populated_with_js.html
+++ b/app/templates/populated_with_js.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="/static/css/hello.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/index.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/populated_with_js.css" rel="stylesheet" type="text/css">
+    <script type="application/javascript" src="/static/js/hobbitText.js"></script>
     <title>Populated With JS</title>
 </head>
 
 <body>
-    <div class="hello-container">
-       There will be things here
+    <nav>
+        <div>
+            <span class="heading">
+                Welcome to the Populated By JS Page
+            </span>
+            <span class="nav-button right">
+                Login
+            </span>
+        </div>
+
+
+    </nav>
+    <div>
+        <div class="left-menu">
+            <h2>Menu</h2>
+            <hr>
+            <div>
+                <div class="menu-item" onclick="window.location.href='/'">Main</div>
+                <div class="menu-item" onclick="window.location.href='/populated_with_js'">Populated With JS</div>
+                <div class="menu-item" onclick="window.location.href='/hello'">Hello</div>
+                <div class="menu-item" onclick="window.location.href='/demo'">Demo Page</div>
+                <div class="menu-item" onclick="window.location.href='/about'">About</div>
+                <div class="menu-item" onclick="window.location.href='/contact'">Contact</div>
+                <div class="menu-item" onclick="window.location.href='/features'">Features</div>
+                <div class="menu-item" onclick="window.location.href='/docs'">Documentation</div>
+            </div>
+        </div>
+        <div class="main-content">
+            <div class="book-heading">
+                <div>
+                    <h2>The Hobbit</h2>
+                    <h4>By JRR Tolkien</h4>
+                    <h3>Chapter 1</h3>
+                </div>
+                <div>
+                    <img class="hobbit-img" src="/static/img/hobbit-cover.jpg">
+                </div>
+            </div>
+            <div id="hobbit-text"></div>
+        </div>
     </div>
 </body>
 </html>
