--- a/app/templates/populated_with_js.html
+++ b/app/templates/populated_with_js.html
@@ -42,7 +42,7 @@
                     <h4>By JRR Tolkien</h4>
                     <h3>Chapter 1</h3>
                 </div>
-                <div>
+                <div class="hobbit-img-container">
                     <img class="hobbit-img" src="/static/img/hobbit-cover.jpg">
                 </div>
             </div>
