--- a/app/static/css/report.css
+++ b/app/static/css/report.css
@@ -33,6 +33,7 @@
         padding-top: 100px;
         font-size: 14px;
         font-family: "Helvetica Neue Light", Helvetica, sans-serif;
+        text-align: center;
     }
     .indent-left {
         padding-left: 45px;
