--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -29,18 +29,13 @@
                 <div class="menu-item" onclick="window.location.href='/hello'">Hello</div>
                 <div class="menu-item" onclick="window.location.href='/demo'">Demo Page</div>
                 <div class="menu-item" onclick="window.location.href='/about'">About</div>
-                <div class="menu-item" onclick="window.location.href='/contact'">Contact</div>
-                <div class="menu-item" onclick="window.location.href='/features'">Features</div>
-                <div class="menu-item" onclick="window.location.href='/docs'">Documentation</div>
+                <div class="menu-item" onclick="window.location.href='/includes_coverpage'">Includes Coverpage</div>
             </div>
         </div>
         <div class="main-content">
             <div class="hello-container">
                 <div class="heading">
                     Hello
-                    {% if name %}
-                        {{ name }}
-                    {% endif %}
                 </div>
             </div>
             <p>The following text is on the next page in the pdf because the following &lt;div&gt; has the style <b>page-break-before: always</b> set.</p>
