--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,9 +28,7 @@
                 <div class="menu-item" onclick="window.location.href='/hello'">Hello</div>
                 <div class="menu-item" onclick="window.location.href='/demo'">Demo Page</div>
                 <div class="menu-item" onclick="window.location.href='/about'">About</div>
-                <div class="menu-item" onclick="window.location.href='/contact'">Contact</div>
-                <div class="menu-item" onclick="window.location.href='/features'">Features</div>
-                <div class="menu-item" onclick="window.location.href='/docs'">Documentation</div>
+                <div class="menu-item" onclick="window.location.href='/includes_coverpage'">Includes Coverpage</div>
             </div>
         </div>
         <div class="main-content">
